vertical alignment fixed on timeline

--- a/style.css
+++ b/style.css
@@ -322,7 +322,7 @@ a:hover {
   height: 15px;
   position: absolute;
   top: 4px;
-  left: 0;
+  left: -2.5;
   width: 15px;
   transition: background 0.3s ease-in-out, border 0.3s ease-in-out;
 }
@@ -400,19 +400,18 @@ a:hover {
   .timeline-centered .timeline-marker {
     position: absolute;
     left: 50%;
-    margin-left: -7.5px;
   }
   .timeline-centered .timeline-info,
   .timeline-centered .timeline-content {
     width: 48%;
   }
   .timeline-centered > .timeline-item:nth-child(odd) .timeline-info {
-    float: left;
+    float: right;
     text-align: right;
     padding-right: 30px;
   }
   .timeline-centered > .timeline-item:nth-child(odd) .timeline-content {
-    float: right;
+    float: left;
     text-align: left;
     padding-left: 30px;
   }
